replaced Integer.valueOf with new Integer (for JDK1.4 compatibility)